fixed image stretching

--- a/css/main.css
+++ b/css/main.css
@@ -45,8 +45,8 @@ html, body, .fill {
 }
 
 .img-responsive {
+  max-width: 100%;
   max-height: 100%;
-  min-height: 100%;
   padding: 0;
 }
 
